--- a/LRAtsSDKSample/app/src/main/res/values/strings.xml
+++ b/LRAtsSDKSample/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="app_id_label">Your ATS SDK App ID</string>
     <string name="envelopes_label">Envelopes</string>
     <string name="get_envelope_label">Get Envelope</string>
-    <string name="app_id_example">85abe30a–2b2a–4b30–910d-32ecc2f80aa7</string>
+    <string name="app_id_example">85abe30a-2b2a-4b30-910d-32ecc2f80aa7</string>
 </resources>
